crates/rspack_error/tests/out_of_order/multi_json_syntax_error/fixtures__multi_json_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: multi_json_syntax_error
---
  × Json parsing error: Unexpected character }
   ╭─[1:1]
 1 │ {
 2 │   "a"
 3 │ }
   · ┬
   · ╰── Unexpected character }
   ╰────
  × Json parsing error: Unexpected end of JSON
   ╭────
 1 │ "测试utf8\"
   ·           ▲
   ·           ╰── Unexpected end of JSON
   ╰────

